add option for legends -- resolves #3

--- a/tests/dummy/app/templates/application.hbs
+++ b/tests/dummy/app/templates/application.hbs
@@ -6,9 +6,13 @@
 </div>
 
 <div>
-	<h3>Pie & Doughnut Chart</h3>
+	<h3>Pie Chart</h3>
 	{{ember-chart type='Pie' data=pieData width=200 height=200}}
-	{{ember-chart type='Doughnut' data=pieData width=200 height=200}}
+</div>
+
+<div>
+	<h3>Doughnut Chart with Legend</h3>
+	{{ember-chart type='Doughnut' data=pieData width=200 height=200 legend=true }}
 </div>
 
 <div>
