--- a/tests/dummy/app/templates/application.hbs
+++ b/tests/dummy/app/templates/application.hbs
@@ -6,8 +6,25 @@
 </div>
 
 <div>
+	<h3>Line Chart Update</h3>
+	<ul>
+		<li>{{input value=lineValue1 type="number"}}</li>
+		<li>{{input value=lineValue2 type="number"}}</li>
+	</ul>
+</div>
+
+<div>
 	<h3>Pie Chart</h3>
 	{{ember-chart type='Pie' data=pieData width=200 height=200}}
+</div>
+
+<div>
+	<h3>Pie Chart Update</h3>
+	<ul>
+		<li>{{input value=pieValue1 type="number"}}</li>
+		<li>{{input value=pieValue2 type="number"}}</li>
+		<li>{{input value=pieValue3 type="number"}}</li>
+	</ul>
 </div>
 
 <div>
