update to fix legend issue

--- a/tests/dummy/app/templates/application.hbs
+++ b/tests/dummy/app/templates/application.hbs
@@ -2,7 +2,7 @@
 
 <div>
 	<h3>Line Chart</h3>
-	{{ember-chart type='Line' data=lineData width=600 height=200}}
+	{{ember-chart type='Line' data=lineData width=600 height=200 legend=true}}
 </div>
 
 <div>
@@ -29,7 +29,7 @@
 
 <div>
 	<h3>Doughnut Chart with Legend</h3>
-	{{ember-chart type='Doughnut' data=pieData width=200 height=200 legend=true }}
+	{{ember-chart type='Doughnut' data=pieData width=200 height=200 legend=true}}
 </div>
 
 <div>
