Closes aomran/ember-cli-chart#33

--- a/tests/dummy/app/templates/application.hbs
+++ b/tests/dummy/app/templates/application.hbs
@@ -6,10 +6,17 @@
 </div>
 
 <div>
-	<h3>Line Chart Update</h3>
+	<h3>Line Chart Data Update</h3>
 	<ul>
 		<li>{{input value=lineValue1 type="number"}}</li>
 		<li>{{input value=lineValue2 type="number"}}</li>
+	</ul>
+</div>
+
+<div>
+	<h3>Line Chart Label Update</h3>
+	<ul>
+		<li>{{input value=lineLabel type="text"}}</li>
 	</ul>
 </div>
 
