Fix example app

--- a/tests/dummy/app/templates/application.hbs
+++ b/tests/dummy/app/templates/application.hbs
@@ -1,57 +1,93 @@
-<h2 id="title">Testing the ChartJS Component</h2>
+<h2 id='title'>Testing the ChartJS Component</h2>
 
 <div>
   <h3>Line Chart</h3>
-  <EmberChart @type="line" @data={{this.lineData}} @width={{600}} @height={{200}} @options={{this.options}} />
+  <EmberChart
+    @type='line'
+    @data={{this.lineData}}
+    @width={{600}}
+    @height={{200}}
+    @options={{this.options}}
+  />
 </div>
 
 <div>
   <h3>Line Chart Data Update</h3>
   <ul>
-    <li><Input @value={{this.lineValue1}} @type="number" /></li>
-    <li><Input @value={{this.lineValue2}} @type="number" /></li>
+    <li><Input @value={{this.lineValue1}} @type='number' /></li>
+    <li><Input @value={{this.lineValue2}} @type='number' /></li>
   </ul>
 </div>
 
 <div>
   <h3>Line Chart Label Update</h3>
   <ul>
-    <li><Input @value={{this.lineLabel}} @type="text" /></li>
+    <li><Input @value={{this.lineLabel}} @type='text' /></li>
   </ul>
 </div>
 
 <div>
   <h3>Pie Chart</h3>
-  <EmberChart @type="pie" @data={{this.this.pieData}} @width={{200}} @height={{200}} @options={{this.options}} />
+  <EmberChart
+    @type='pie'
+    @data={{this.this.pieData}}
+    @width={{200}}
+    @height={{200}}
+    @options={{this.options}}
+  />
 </div>
 
 <div>
   <h3>Pie Chart Update</h3>
   <ul>
-    <li><Input @value={{this.pieValue1}} @type="number" /></li>
-    <li><Input @value={{this.pieValue2}} @type="number" /></li>
-    <li><Input @value={{this.pieValue3}} @type="number" /></li>
+    <li><Input @value={{this.pieValue1}} @type='number' /></li>
+    <li><Input @value={{this.pieValue2}} @type='number' /></li>
+    <li><Input @value={{this.pieValue3}} @type='number' /></li>
   </ul>
 </div>
 
 <div>
   <h3>Doughnut Chart with Legend</h3>
-  <EmberChart @type="doughnut" @data={{this.pieData}} @width={{200}} @height={{200}} @options={{this.options}} />
+  <EmberChart
+    @type='doughnut'
+    @data={{this.pieData}}
+    @width={{200}}
+    @height={{200}}
+    @options={{this.options}}
+  />
 </div>
 
 <div>
   <h3>Bar Chart</h3>
-  <EmberChart @type="bar" @data={{this.barData}} @width={{600}} @height={{200}} @options={{this.options}} />
+  <EmberChart
+    @type='bar'
+    @data={{this.barData}}
+    @width={{600}}
+    @height={{200}}
+    @options={{this.options}}
+  />
 </div>
 
 <div>
   <h3>Radar Chart</h3>
-  <EmberChart @type="radar" @data={{this.radarData}} @width={{400}} @height={{400}} @options={{this.options}} />
+  <EmberChart
+    @type='radar'
+    @data={{this.radarData}}
+    @width={{400}}
+    @height={{400}}
+    @options={{this.options}}
+  />
 </div>
 
 <div>
   <h3>Polar Area Chart</h3>
-  <EmberChart @type="polarArea" @data={{this.polarAreaData}} @width={{400}} @height={{400}} @options={{this.options}} />
+  <EmberChart
+    @type='polarArea'
+    @data={{this.polarAreaData}}
+    @width={{400}}
+    @height={{400}}
+    @options={{this.options}}
+  />
 </div>
 
 {{outlet}}
